﻿- Add support for cargo and passenger harbors
- Add support for snowplows
- Fix button on cemetaries being partially covered by an invisible background panel