@@ -15,8 +15,9 @@
 "POLICECAR","Police cars","Vehicle selection title - police ground vehicles."
 "PRISONVAN","Prisoner transfer","Vehicle selection title - prisoner transfer ground vehicles."
 "CARGO_TRUCK","Cargo transport","Vehicle selection title - cargo transport ground vehicles."
-"ROAD_MAINT","Road maintenance","Vehicle selection title - toad maintenance vehicles."
+"ROAD_MAINT","Road maintenance","Vehicle selection title - road maintenance vehicles."
 "ROAD_SNOW","Snow clearing","Vehicle selection title - snow clearing vehicles."
+"PARK_MAINT","Park maintenance","Vehicle selection title - park maintenance vehicles."
 "MAIL_COLLECT","Mail collection","Vehicle selection title - post office mail collection vehicles (post vans)."
 "MAIL_UNSORTED","Unsorted mail transfer","Vehicle selection title - post office unsorted mail transfer vehicles (post trucks), typically transferring from post offices to sorting depots."
 "MAIL_SORTED","Sorted mail transfer","Vehicle selection title - post office sorted mail transfer vehicles (post trucks), typically transferring from sorting depots to post offices."
@@ -31,6 +32,7 @@
 "AIR_CARGO","Cargo planes","Vehicle selection title - cargo planes."
 "SHIP_PASSENGER","Passenger ships","Vehicle selection title - passenger ships."
 "SHIP_CARGO","Cargo ships","Vehicle selection title - cargo ships."
+"BUS_INTERCITY","Intercity buses", "Vehicle selection title - intercity buses."
 "LOGS","Forestry products","Industrial transport vehicle selection title - logs (zoned forestry resource)."
 "LUMBER","Lumber","Industrial transport vehicle selectiawon title - lumber (zoned forestry processors)."
 "GRAIN","Agricultural products","Industrial transport vehicle selection title - grain (zoned farming resource)."
